# oasis

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.test.yml  docker-compose.yml  oasis.toml  大规模集群节点管理工具方案设计文档.md
.cargo/: config.toml
agent-deploy/agent0/: agent.env  install.sh  oasis-agent.service
config/: oasis-agent.toml  oasis-cli.toml  oasis-server.toml
crates/oasis-agent/: Cargo.toml
crates/oasis-agent/src/: agent_manager.rs  cert_bootstrap.rs  error.rs  file_manager.rs  heartbeat_service.rs  lib.rs  main.rs  nats_client.rs  task_manager.rs
crates/oasis-agent/src/application/ports/: config_repository.rs  fact_collector.rs  fact_repository.rs  mod.rs
crates/oasis-agent/src/application/services/: agent_config_listener.rs  executor.rs  fact_service.rs  heartbeat.rs  mod.rs  task_processor.rs  task_worker.rs
crates/oasis-agent/src/config/: mod.rs  unified.rs
crates/oasis-agent/src/domain/: mod.rs
crates/oasis-agent/src/domain/agent/: mod.rs  model.rs  status.rs
crates/oasis-agent/src/domain/models/: mod.rs
crates/oasis-agent/src/domain/services/: mod.rs
crates/oasis-agent/src/domain/task/: mod.rs  model.rs  status.rs
crates/oasis-agent/src/infrastructure/: mod.rs
crates/oasis-agent/src/infrastructure/nats/: attributes_repository.rs  client.rs  config_repository.rs  consumer.rs  fact_repository.rs  mod.rs  publisher.rs
crates/oasis-agent/src/infrastructure/system/: executor.rs  fact_collector.rs  file_apply_handler.rs  mod.rs
crates/oasis-cli/: Cargo.toml
crates/oasis-cli/src/: certificate.rs  client.rs  commands.rs  main.rs  precheck.rs  time.rs  tls.rs  ui.rs
crates/oasis-cli/src/commands/: agent.rs  config.rs  exec.rs  file.rs  mod.rs  node.rs  rollout.rs  storage.rs  system.rs  task.rs
crates/oasis-cli/src/common/: target.rs
crates/oasis-cli/src/config/: mod.rs  unified.rs
crates/oasis-core/: Cargo.toml  build.rs
crates/oasis-core/benches/: e2e_latency.rs  fanout.rs  nats_io.rs  proto.rs  selector.rs  throughput.rs
crates/oasis-core/proto/: oasis.proto
crates/oasis-core/src/: agent.rs  agent_types.rs  backoff.rs  config.rs  config_strategies.rs  config_strategy.rs  constants.rs  core_types.rs  csr_types.rs  dlq.rs  error.rs  file_types.rs  lib.rs  nats.rs  patch.rs  proto_bridge.rs  proto_impls.rs  rate_limit.rs  rollout_types.rs  selector.rs  shutdown.rs  task.rs  task_types.rs  telemetry.rs  type_defs.rs  utils.rs
crates/oasis-core/src/config/: common.rs  loader.rs  mod.rs  sources.rs  traits.rs  validation.rs  watcher.rs
crates/oasis-core/src/transport/: mod.rs  nats.rs
crates/oasis-core/tests/: cert_bootstrap_integration.rs
crates/oasis-server/: Cargo.toml
crates/oasis-server/src/: infrastructure.rs  interface.rs  lib.rs  main.rs
crates/oasis-server/src/application/: context.rs  mod.rs
crates/oasis-server/src/application/ports/: repositories.rs
crates/oasis-server/src/application/selector/: engine.rs  grammar.pest  index.rs  mod.rs  parser.rs  planner.rs
crates/oasis-server/src/application/services/: health_check_service.rs  mod.rs  rollout_manager.rs
crates/oasis-server/src/application/use_cases/commands/: clear_files.rs  execute_task.rs  mod.rs  rollout_deploy.rs  upload_file.rs
crates/oasis-server/src/application/use_cases/queries/: config_format_handler.rs  manage_agent_config.rs  manage_agents.rs  manage_nodes.rs  mod.rs  stream_task_results.rs
crates/oasis-server/src/bootstrap/: lifecycle.rs  mod.rs
crates/oasis-server/src/config/: mod.rs  unified.rs
crates/oasis-server/src/domain/: mod.rs
crates/oasis-server/src/domain/events/: agent_events.rs  mod.rs  node_events.rs
crates/oasis-server/src/domain/models/: agent.rs  file.rs  mod.rs  node.rs  rollout.rs  task.rs
crates/oasis-server/src/domain/services/: mod.rs  selector_engine.rs
crates/oasis-server/src/infrastructure/: bootstrap.rs  connection.rs  di_container.rs  file_lock.rs  lifecycle.rs  mod.rs  monitor.rs  resource_manager.rs  services.rs  streams.rs  tls.rs
crates/oasis-server/src/infrastructure/messaging/: kv.rs  mod.rs  streams.rs
crates/oasis-server/src/infrastructure/monitor/: agent_info_monitor.rs  heartbeat_monitor.rs  task_monitor.rs
crates/oasis-server/src/infrastructure/persistence/: agent_config_repository.rs  agent_repository.rs  file_repository.rs  mod.rs  node_repository.rs  rollout_repository.rs  task_repository.rs
crates/oasis-server/src/infrastructure/services/: agent_service.rs  ca_service.rs  file_service.rs  index_updater.rs  kv_watcher.rs  leader_election.rs  mod.rs  rollout_service.rs  task_service.rs
crates/oasis-server/src/infrastructure/services/agent_service/: selector_engine.rs
crates/oasis-server/src/interface/: grpc.rs  mod.rs  server_manager.rs
crates/oasis-server/src/interface/grpc/: converters.rs  errors.rs  factory.rs  handlers.rs  mod.rs  server.rs
crates/oasis-server/src/interface/grpc/handlers/: agents.rs  config.rs  file.rs  health.rs  mod.rs  nodes.rs  rollout.rs  streaming.rs  task.rs
crates/oasis-server/src/interface/health/: mod.rs
scripts/: generate-certs.sh
