[package]
name = "oasis"
version = "0.1.0"
edition = "2024"
description = "OpenCloudOS大规模集群节点管理工具"


[workspace]
members = [
  "crates/oasis-core",
  "crates/oasis-server",
  "crates/oasis-agent",
  "crates/oasis-cli",
]
resolver = "2"

[workspace.dependencies]
# 核心依赖
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "local-time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.42"
tonic = { version = "0.11", features = ["tls"] }
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
figment = { version = "0.10", features = ["toml", "env"] }
futures-util = "0.3"
futures = "0.3"

# 配置管理相关 - 多个组件使用
serde_yaml = "0.9"
toml = "0.8"

# 证书生成相关
rcgen = "0.12"
x509-parser = "0.15"

prost = "0.12"

# 并发数据结构
dashmap = "5.5"
sysinfo = "0.30"

chrono = { version = "0.4", features = ["serde", "clock"] }
time = { version = "0.3", features = ["macros"] }
uuid = { version = "1.15", features = ["v4"] }
governor = "0.6"
sha2 = "0.10"
tokio-stream = "0.1"
tokio-util = "0.7"
url = "2.5"
regex = { version = "1", default-features = false, features = ["std"] }
base64 = "0.21"
once_cell = "1.19"
lazy_static = "1.5.0"
backoff = { version = "0.4", features = ["tokio"] }
