[workspace]
members = [
  "crates/oasis-core",
  "crates/oasis-server",
  "crates/oasis-agent",
  "crates/oasis-cli",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "local-time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.45"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
figment = { version = "0.10", features = ["toml", "env"] }
futures-util = "0.3"
futures = "0.3"

serde_yaml = "0.9"
toml = "0.9"

rcgen = "0.14"
x509-parser = "0.18"

prost = "0.14"

dashmap = "6.1"
sysinfo = "0.36"

chrono = { version = "0.4", features = ["serde", "clock"] }
time = { version = "0.3", features = ["macros"] }
uuid = { version = "1.19", features = ["v7"] }
governor = "0.10"
sha2 = "0.10"
tokio-stream = "0.1"
tokio-util = "0.7"
url = "2.5"
regex = { version = "1", default-features = false, features = ["std"] }
base64 = "0.22"
backoff = { version = "0.4", features = ["tokio"] }
