[package]
name = "oasis-agent"
version = "0.1.0"
edition = "2024"

[features]
default = ["std-backend"]
std-backend = []
systemd-backend = []
bubblewrap-backend = []

[[bin]]
name = "oasis-agent"
path = "src/main.rs"

[dependencies]
oasis-core = { path = "../oasis-core" }

# 从 workspace 继承的依赖
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
sysinfo = { workspace = true }

# 本地依赖
uuid = { version = "1.15", features = ["v4"] }
time = { version = "0.3", features = ["macros"] }
hostname = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
sha2 = "0.10"
if-addrs = "0.10"
once_cell = "1"
lazy_static = "1.4"
regex = "1"
getrandom = "0.2"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
url = "2.4"
futures = "0.3"
tokio-util = "0.7"
prost = { workspace = true }
dashmap = { workspace = true }

