[package]
name = "oasis-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints]
workspace = true

[features]
default = ["std-backend"]
std-backend = []
systemd-backend = []
bubblewrap-backend = []

[[bin]]
name = "oasis-agent"
path = "src/main.rs"

[dependencies]
oasis-core = { path = "../oasis-core" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
backoff = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
prost = { workspace = true }
dashmap = { workspace = true }

hostname = "0.4"
if-addrs = "0.14"
getrandom = "0.3"
libc = "0.2"
