[package]
name = "oasis-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oasis-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tonic = { workspace = true }
oasis-core = { path = "../oasis-core" }
serde = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
serde_json = { workspace = true }
rcgen = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "process",
  "io-std",
] }

humantime = "2.1"
which = "6.0"

console = "0.15"
comfy-table = "7.1"

bytesize = "1.3"
