[package]
name = "oasis-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints]
workspace = true

[[bin]]
name = "oasis-cli"
path = "src/main.rs"

[dependencies]
base64 = { workspace = true }
anyhow = { workspace = true }
backon = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tonic = { workspace = true }
oasis-core = { path = "../oasis-core" }
serde = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
serde_json = { workspace = true }
rcgen = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "process",
  "io-std",
] }
regex = { workspace = true }
sha2 = { workspace = true }
rand = "0.9"
hex = "0.4"

humantime = "2.3"
which = "8.0"

console = "0.16"
comfy-table = "=7.1.0"

bytesize = "2.3"
indicatif = "0.18"
clap_complete = "4.5.65"

[dev-dependencies]
tempfile = "3.14"
x509-parser = { workspace = true }
