[package]
name = "oasis-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# 从 workspace 继承的依赖
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
async-nats = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
figment = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
governor = { workspace = true }
backoff = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

libc = "0.2"
thiserror = "1.0"
derive_more = "0.99"
bytes = "1.6"
rand = "0.8"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
