[package]
name = "oasis-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
async-nats = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
async-trait = { workspace = true }
figment = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
governor = { workspace = true }
backoff = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

libc = "0.2"
thiserror = "2.0"
derive_more = { version = "2.1", features = [
    "display",
    "from",
    "as_ref",
    "into",
] }
bytes = "1.11"
rand = "0.9"
signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }

[build-dependencies]
tonic-build = { version = "0.14" }
tonic-prost-build = { version = "0.14" }

[dev-dependencies]
criterion = "0.7"
roaring = "0.11"
pest = "2.8"
pest_derive = "2.8"
serde_json = "1.0"

[[bench]]
name = "proto"
harness = false

[[bench]]
name = "selector"
harness = false

[[bench]]
name = "fanout"
harness = false

[[bench]]
name = "nats_io"
harness = false

[[bench]]
name = "e2e_latency"
harness = false

[[bench]]
name = "throughput"
harness = false
