[package]
name = "oasis-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oasis-server"
path = "src/main.rs"

[dependencies]
oasis-core = { path = "../oasis-core" }

# 从 workspace 继承的依赖
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
async-nats = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
prost = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
governor = { workspace = true }
sha2 = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
figment = { workspace = true, features = ["toml", "env"] }

roaring = "0.10"
pest = "2.7"
pest_derive = "2.7"

# TLS 相关依赖
rustls = "0.22"
rustls-pemfile = "2.1"
fs2 = "0.4"
