[package]
name = "oasis-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints]
workspace = true

[[bin]]
name = "oasis-server"
path = "src/main.rs"

[dependencies]
oasis-core = { path = "../oasis-core" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
async-nats = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
governor = { workspace = true }
sha2 = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
figment = { workspace = true, features = ["toml", "env"] }

roaring = "0.11"
pest = "2.8"
pest_derive = "2.8"

rustls-pemfile = "2.2"
fs2 = "0.4"
