[package]
name = "oasis-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dev-dependencies]
tempfile = "3.14"

[lib]
name = "oasis_server"
path = "src/lib.rs"

[[bin]]
name = "oasis-server"
path = "src/main.rs"

[dependencies]
oasis-core = { path = "../oasis-core" }
backon = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
rcgen = "0.14"
x509-parser = "0.16"
pem = "3.0"
toml = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
governor = { workspace = true }
sha2 = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
figment = { workspace = true, features = ["toml", "env"] }
time = { workspace = true }
webpki = { version = "0.22", features = ["alloc"] }
oid-registry = "0.7"

roaring = "0.11"
pest = "2.8"
pest_derive = "2.8"

rustls-pemfile = "2.2"
fs4 = "0.12"
